--- a/chatbot/templates/chatbot/login.html
+++ b/chatbot/templates/chatbot/login.html
@@ -6,6 +6,16 @@
 {% block content %}
 <div class =" auth-container">
 <h2>Login</h2>
+
+{% if messages %}
+    <ul class ="messages">
+        {% for message in messages %}
+            <li{% if message.tags %} class = "{{message.tags}}"{% endif %}>{{ message }} </li>
+        {% endfor %}
+    </ul>
+{% endif %}
+
+
 <form method = "post">
     {% csrf_token %}
     {% comment %} {{ form.as_p }} {% endcomment %}
